fix mobile overflow

--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ body{ margin:0 auto;
 .footer_6 h1{ width: 110px;;margin: 0 auto;}
 .footer_6 h1 img{ width: 110px; height: 110px}
 .footer_6 h2{ font-size: 12px; text-align: center; color: #fff; line-height:30px;}
-.Box {position: relative;margin-top: 40px;}
+.Box {width:100%;position: relative;margin-top: 40px;}
 /* .Box .content {width: 1200px;} */
 .Box .Box_con {position: relative;}
 .Box .Box_con .btnl {position: absolute;}
